--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 public/generated
 coverage
 tetramaster/art/output
+tetramaster/art/sd-models
 
 # Editor directories and files
 .vscode/*
